--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <h3>Tournament Scheduler</h3>
     <script src="script.js"></script>
 </body>
 </html>
