taking input form user

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
 
     <h3>Tournament Scheduler</h3>
+
+    <textarea id="teamInput" ></textarea>
+    <button id="generateSchedule">Generate</button>
     <script src="script.js"></script>
 </body>
 </html>
