designing the text area

--- a/index.html
+++ b/index.html
@@ -9,9 +9,16 @@
 <body>
 
     <h3>Tournament Scheduler</h3>
-
-    <textarea id="teamInput" ></textarea>
+    <div class="myTextArea">
+        <textarea id="teamInput" ></textarea>
     <button id="generateSchedule">Generate</button>
+
+    </div>
+    
+    <div id="tableDiv">
+
+    </div>
+    
     <script src="script.js"></script>
 </body>
 </html>
