fixing the schedule with odd number of the teams

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     </div>
     
     <div id="tableDiv">
-
+        <h3>Schedule</h3>
+        <hr>
     </div>
     
     <script src="script.js"></script>
