--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <h3>Tournament Scheduler</h3>
     <div class="myTextArea">
-        <textarea id="teamInput" placeholder="Enter the name of the teams here!! Press Enter after each name of the team!!"></textarea>
+        <textarea id="teamInput" placeholder="Enter one team per line.."></textarea>
         <button id="generateSchedule">Generate</button>
 
     </div>
